tests/ui/drop/explicit-drop-call-error.stderr
error[E0040]: explicit use of destructor method
  --> $DIR/explicit-drop-call-error.rs:14:5
   |
LL |     Drop::drop(&mut Foo)
   |     ^^^^^^^^^^
   |     |
   |     explicit destructor calls not allowed
   |     help: consider using `drop` function: `drop`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0040`.
